Compilador_ANTLR_JAVA/src/ANTLR/ParserTParser.java
package ANTLR;
// Generated from ParserT.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.io.IOException;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ParserTParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLAY=1, LISTEN=2, L_PAR=3, R_PAR=4, VARENT=5, VARACO=6, VARBOL=7, SUMA=8, 
		RESTA=9, MULTIPLICACION=10, DIVISION=11, COMA=12, ASIG=13, STATE=14, RAIZ_CUAD=15, 
		ELEVADO=16, SIN=17, CIE=18, NULO=19, PI=20, DO=21, RE=22, MI=23, SI_PRIMERA=24, 
		SI_SEGUNDA=25, SINO=26, O=27, Y=28, RELACION=29, MAYOR=30, MAYOR_IGUAL=31, 
		MENOR=32, MENOR_IGUAL=33, IGUAL=34, DISTINTO=35, PARIZQ=36, PARDER=37, 
		MIENTRAS=38, PARA_1=39, PARA_2=40, COR_1=41, COR_2=42, DOS_P=43, TEMPO=44, 
		ACORDE=45, VARIABLE=46, WS=47;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_play = 2, RULE_listen = 3, 
		RULE_declaracion = 4, RULE_son_dison = 5, RULE_condicion = 6, RULE_mientras = 7, 
		RULE_para = 8, RULE_oper_arit = 9;
	public static final String[] ruleNames = {
		"program", "statement", "play", "listen", "declaracion", "son_dison", 
		"condicion", "mientras", "para", "oper_arit"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'play'", "'listen'", "'('", "')'", "'TEMPO'", "'ACORDE'", "'STATE'", 
		"'mf'", "'mp'", "'f'", "'p'", "','", "'::'", null, "'pp'", "'ff'", "'Onda Sinusoide'", 
		"'Onda Cierra'", "'mute'", "'3.141592'", "'261.63'", "'293.66'", "'329.63'", 
		"'Si'", "'es Consonante'", "'No ser Disonante'", "'dd'", "'d_d'", null, 
		"'M'", "'Me'", "'m'", "'me'", "'e'", "'ne'", "'<'", "'>'", "'|:|'", "'*'", 
		"'$'", "'['", "']'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PLAY", "LISTEN", "L_PAR", "R_PAR", "VARENT", "VARACO", "VARBOL", 
		"SUMA", "RESTA", "MULTIPLICACION", "DIVISION", "COMA", "ASIG", "STATE", 
		"RAIZ_CUAD", "ELEVADO", "SIN", "CIE", "NULO", "PI", "DO", "RE", "MI", 
		"SI_PRIMERA", "SI_SEGUNDA", "SINO", "O", "Y", "RELACION", "MAYOR", "MAYOR_IGUAL", 
		"MENOR", "MENOR_IGUAL", "IGUAL", "DISTINTO", "PARIZQ", "PARDER", "MIENTRAS", 
		"PARA_1", "PARA_2", "COR_1", "COR_2", "DOS_P", "TEMPO", "ACORDE", "VARIABLE", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ParserT.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ParserTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(20);
				statement();
				}
				}
				setState(23); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLAY) | (1L << LISTEN) | (1L << VARENT) | (1L << VARACO) | (1L << VARBOL) | (1L << SUMA) | (1L << RESTA) | (1L << MULTIPLICACION) | (1L << DIVISION) | (1L << RAIZ_CUAD) | (1L << ELEVADO) | (1L << SIN) | (1L << CIE) | (1L << SI_PRIMERA) | (1L << MIENTRAS) | (1L << PARA_1) | (1L << TEMPO) | (1L << VARIABLE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public PlayContext play() {
			return getRuleContext(PlayContext.class,0);
		}
		public ListenContext listen() {
			return getRuleContext(ListenContext.class,0);
		}
		public Oper_aritContext oper_arit() {
			return getRuleContext(Oper_aritContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public Son_disonContext son_dison() {
			return getRuleContext(Son_disonContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public ParaContext para() {
			return getRuleContext(ParaContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(32);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLAY:
				enterOuterAlt(_localctx, 1);
				{
				setState(25);
				play();
				}
				break;
			case LISTEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(26);
				listen();
				}
				break;
			case SUMA:
			case RESTA:
			case MULTIPLICACION:
			case DIVISION:
			case RAIZ_CUAD:
			case ELEVADO:
			case SIN:
			case CIE:
			case TEMPO:
			case VARIABLE:
				enterOuterAlt(_localctx, 3);
				{
				setState(27);
				oper_arit();
				}
				break;
			case VARENT:
			case VARACO:
			case VARBOL:
				enterOuterAlt(_localctx, 4);
				{
				setState(28);
				declaracion();
				}
				break;
			case SI_PRIMERA:
				enterOuterAlt(_localctx, 5);
				{
				setState(29);
				son_dison();
				}
				break;
			case MIENTRAS:
				enterOuterAlt(_localctx, 6);
				{
				setState(30);
				mientras();
				}
				break;
			case PARA_1:
				enterOuterAlt(_localctx, 7);
				{
				setState(31);
				para();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlayContext extends ParserRuleContext {
		public TerminalNode PLAY() { return getToken(ParserTParser.PLAY, 0); }
		public TerminalNode L_PAR() { return getToken(ParserTParser.L_PAR, 0); }
		public TerminalNode R_PAR() { return getToken(ParserTParser.R_PAR, 0); }
		public List<TerminalNode> TEMPO() { return getTokens(ParserTParser.TEMPO); }
		public TerminalNode TEMPO(int i) {
			return getToken(ParserTParser.TEMPO, i);
		}
		public List<TerminalNode> ACORDE() { return getTokens(ParserTParser.ACORDE); }
		public TerminalNode ACORDE(int i) {
			return getToken(ParserTParser.ACORDE, i);
		}
		public List<TerminalNode> VARIABLE() { return getTokens(ParserTParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ParserTParser.VARIABLE, i);
		}
		public List<Oper_aritContext> oper_arit() {
			return getRuleContexts(Oper_aritContext.class);
		}
		public Oper_aritContext oper_arit(int i) {
			return getRuleContext(Oper_aritContext.class,i);
		}
		public List<TerminalNode> STATE() { return getTokens(ParserTParser.STATE); }
		public TerminalNode STATE(int i) {
			return getToken(ParserTParser.STATE, i);
		}
		public PlayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_play; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitPlay(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlayContext play() throws RecognitionException {
		PlayContext _localctx = new PlayContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_play);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(PLAY);
			setState(35);
			match(L_PAR);
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(41);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(36);
					match(TEMPO);
					}
					break;
				case 2:
					{
					setState(37);
					match(ACORDE);
					}
					break;
				case 3:
					{
					setState(38);
					match(VARIABLE);
					}
					break;
				case 4:
					{
					setState(39);
					oper_arit();
					}
					break;
				case 5:
					{
					setState(40);
					match(STATE);
					}
					break;
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUMA) | (1L << RESTA) | (1L << MULTIPLICACION) | (1L << DIVISION) | (1L << STATE) | (1L << RAIZ_CUAD) | (1L << ELEVADO) | (1L << SIN) | (1L << CIE) | (1L << TEMPO) | (1L << ACORDE) | (1L << VARIABLE))) != 0) );
			setState(45);
			match(R_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListenContext extends ParserRuleContext {
		public TerminalNode LISTEN() { return getToken(ParserTParser.LISTEN, 0); }
		public TerminalNode L_PAR() { return getToken(ParserTParser.L_PAR, 0); }
		public TerminalNode R_PAR() { return getToken(ParserTParser.R_PAR, 0); }
		public TerminalNode VARIABLE() { return getToken(ParserTParser.VARIABLE, 0); }
		public TerminalNode VARENT() { return getToken(ParserTParser.VARENT, 0); }
		public TerminalNode VARACO() { return getToken(ParserTParser.VARACO, 0); }
		public TerminalNode VARBOL() { return getToken(ParserTParser.VARBOL, 0); }
		public ListenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listen; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor )
				try {
					return ((ParserTVisitor<? extends T>)visitor).visitListen(this);
				} catch (IOException e) {
					// TODO Auto-generated catch block
					e.printStackTrace();
				}
			return visitor.visitChildren(this);
		}
	}

	public final ListenContext listen() throws RecognitionException {
		ListenContext _localctx = new ListenContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listen);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(LISTEN);
			setState(48);
			match(L_PAR);
			{
			setState(49);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VARENT) | (1L << VARACO) | (1L << VARBOL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(50);
			match(VARIABLE);
			}
			setState(52);
			match(R_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	 
		public DeclaracionContext() { }
		public void copyFrom(DeclaracionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarAcoContext extends DeclaracionContext {
		public TerminalNode VARACO() { return getToken(ParserTParser.VARACO, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(ParserTParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ParserTParser.VARIABLE, i);
		}
		public TerminalNode ASIG() { return getToken(ParserTParser.ASIG, 0); }
		public TerminalNode ACORDE() { return getToken(ParserTParser.ACORDE, 0); }
		public DeclarAcoContext(DeclaracionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitDeclarAco(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarEntContext extends DeclaracionContext {
		public TerminalNode VARENT() { return getToken(ParserTParser.VARENT, 0); }
		public TerminalNode VARIABLE() { return getToken(ParserTParser.VARIABLE, 0); }
		public TerminalNode ASIG() { return getToken(ParserTParser.ASIG, 0); }
		public Oper_aritContext oper_arit() {
			return getRuleContext(Oper_aritContext.class,0);
		}
		public DeclarEntContext(DeclaracionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitDeclarEnt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarBolContext extends DeclaracionContext {
		public TerminalNode VARBOL() { return getToken(ParserTParser.VARBOL, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(ParserTParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ParserTParser.VARIABLE, i);
		}
		public TerminalNode ASIG() { return getToken(ParserTParser.ASIG, 0); }
		public TerminalNode STATE() { return getToken(ParserTParser.STATE, 0); }
		public DeclarBolContext(DeclaracionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitDeclarBol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracion);
		int _la;
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARENT:
				_localctx = new DeclarEntContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				match(VARENT);
				setState(55);
				match(VARIABLE);
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASIG) {
					{
					setState(56);
					match(ASIG);
					{
					setState(57);
					oper_arit();
					}
					}
				}

				}
				break;
			case VARACO:
				_localctx = new DeclarAcoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(VARACO);
				setState(61);
				match(VARIABLE);
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASIG) {
					{
					setState(62);
					match(ASIG);
					setState(63);
					_la = _input.LA(1);
					if ( !(_la==ACORDE || _la==VARIABLE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
				break;
			case VARBOL:
				_localctx = new DeclarBolContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				match(VARBOL);
				setState(67);
				match(VARIABLE);
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASIG) {
					{
					setState(68);
					match(ASIG);
					setState(69);
					_la = _input.LA(1);
					if ( !(_la==STATE || _la==VARIABLE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Son_disonContext extends ParserRuleContext {
		public TerminalNode SI_PRIMERA() { return getToken(ParserTParser.SI_PRIMERA, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode SI_SEGUNDA() { return getToken(ParserTParser.SI_SEGUNDA, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode SINO() { return getToken(ParserTParser.SINO, 0); }
		public Son_disonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_son_dison; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitSon_dison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Son_disonContext son_dison() throws RecognitionException {
		Son_disonContext _localctx = new Son_disonContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_son_dison);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(SI_PRIMERA);
			setState(75);
			condicion(0);
			setState(76);
			match(SI_SEGUNDA);
			setState(78); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(77);
					statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(80); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(82);
				match(SINO);
				setState(84); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(83);
						statement();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(86); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionContext extends ParserRuleContext {
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
	 
		public CondicionContext() { }
		public void copyFrom(CondicionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CondOperYContext extends CondicionContext {
		public List<CondicionContext> condicion() {
			return getRuleContexts(CondicionContext.class);
		}
		public CondicionContext condicion(int i) {
			return getRuleContext(CondicionContext.class,i);
		}
		public TerminalNode Y() { return getToken(ParserTParser.Y, 0); }
		public CondOperYContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitCondOperY(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarBolSiNoContext extends CondicionContext {
		public TerminalNode VARBOL() { return getToken(ParserTParser.VARBOL, 0); }
		public TerminalNode VARIABLE() { return getToken(ParserTParser.VARIABLE, 0); }
		public VarBolSiNoContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitVarBolSiNo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StateSiNoContext extends CondicionContext {
		public TerminalNode STATE() { return getToken(ParserTParser.STATE, 0); }
		public StateSiNoContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitStateSiNo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CondOperOContext extends CondicionContext {
		public List<CondicionContext> condicion() {
			return getRuleContexts(CondicionContext.class);
		}
		public CondicionContext condicion(int i) {
			return getRuleContext(CondicionContext.class,i);
		}
		public TerminalNode O() { return getToken(ParserTParser.O, 0); }
		public CondOperOContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitCondOperO(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CondCadSiNoContext extends CondicionContext {
		public TerminalNode PARIZQ() { return getToken(ParserTParser.PARIZQ, 0); }
		public TerminalNode COMA() { return getToken(ParserTParser.COMA, 0); }
		public TerminalNode PARDER() { return getToken(ParserTParser.PARDER, 0); }
		public List<TerminalNode> ACORDE() { return getTokens(ParserTParser.ACORDE); }
		public TerminalNode ACORDE(int i) {
			return getToken(ParserTParser.ACORDE, i);
		}
		public List<TerminalNode> VARIABLE() { return getTokens(ParserTParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ParserTParser.VARIABLE, i);
		}
		public CondCadSiNoContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitCondCadSiNo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OperAritSINOContext extends CondicionContext {
		public TerminalNode L_PAR() { return getToken(ParserTParser.L_PAR, 0); }
		public List<Oper_aritContext> oper_arit() {
			return getRuleContexts(Oper_aritContext.class);
		}
		public Oper_aritContext oper_arit(int i) {
			return getRuleContext(Oper_aritContext.class,i);
		}
		public TerminalNode RELACION() { return getToken(ParserTParser.RELACION, 0); }
		public TerminalNode R_PAR() { return getToken(ParserTParser.R_PAR, 0); }
		public OperAritSINOContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserTVisitor ) return ((ParserTVisitor<? extends T>)visitor).visitOperAritSINO(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionContext condicion() throws RecognitionException {
		return condicion(0);
	}

	private CondicionContext condicion(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CondicionContext _localctx = new CondicionContext(_ctx, _parentState);
		CondicionContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_condicion, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARBOL:
				{
				_localctx = new VarBolSiNoContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(91);
				match(VARBOL);
				setState(92);
				match(VARIABLE);
				}
				break;
			case PARIZQ:
				{
				_localctx = new CondCadSiNoContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(93);
				match(PARIZQ);
				setState(94);
				_la = _input.LA(1);
				if ( !(_la==ACORDE || _la==VARIABLE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(95);
				match(COMA);
				setState(96);
				_la = _input.LA(1);
				if ( !(_la==ACORDE || _la==VARIABLE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(97);
				match(PARDER);
				}
				break;
			case L_PAR:
				{
				_localctx = new OperAritSINOContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(98);
				match(L_PAR);
				setState(99);
				oper_arit();
				setState(100);
				match(RELACION);
				setState(101);
				oper_arit();
				setState(102);
				match(R_PAR);
				}
				break;
			case STATE:
				{
				_localctx = new StateSiNoContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(104);
				match(STATE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(113);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						_localctx = new CondOperYContext(new CondicionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_condicion);
						setState(107);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(108);
						match(Y);
						setState(109);
						condicion(3);
						}
						break;
					case 2:
						{
						_localctx = new CondOperOContext(new CondicionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_condicion);
						setState(110);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(111);
						match(O);
						setState(112);
						condicion(2);
						}
						break;
					}
					} 
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MientrasContext extends ParserRuleContext {
		public List<TerminalNode> MIENTRAS() { return getTokens(ParserTParser.MIENTRAS); }
		public TerminalNode MIENTRAS(int i) {
			return getToken(ParserTParser.MIENTRAS, i);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MientrasContext(ParserRuleContext parent, int invokingState) {
